# lib/api-spec/openapi.yaml
@@ -112,6 +112,10 @@ paths:
           in: query
           schema:
             type: string
+        - name: state
+          in: query
+          schema:
+            type: string
         - name: modality
           in: query
           schema:
